v19.1/classes/GC.Spread.Sheets.CellTypes.CheckBox.md
# Class: CheckBox

[Sheets](../modules/GC.Spread.Sheets.md).[CellTypes](../modules/GC.Spread.Sheets.CellTypes.md).CheckBox

## Hierarchy

- [`Base`](GC.Spread.Sheets.CellTypes.Base.md)

  ↳ **`CheckBox`**

## Table of contents

### Constructors

- [constructor](GC.Spread.Sheets.CellTypes.CheckBox.md#constructor)

### Properties

- [typeName](GC.Spread.Sheets.CellTypes.CheckBox.md#typename)

### Methods

- [activateEditor](GC.Spread.Sheets.CellTypes.CheckBox.md#activateeditor)
- [boxSize](GC.Spread.Sheets.CellTypes.CheckBox.md#boxsize)
- [caption](GC.Spread.Sheets.CellTypes.CheckBox.md#caption)
- [createEditorElement](GC.Spread.Sheets.CellTypes.CheckBox.md#createeditorelement)
- [deactivateEditor](GC.Spread.Sheets.CellTypes.CheckBox.md#deactivateeditor)
- [focus](GC.Spread.Sheets.CellTypes.CheckBox.md#focus)
- [format](GC.Spread.Sheets.CellTypes.CheckBox.md#format)
- [fromJSON](GC.Spread.Sheets.CellTypes.CheckBox.md#fromjson)
- [getAutoFitHeight](GC.Spread.Sheets.CellTypes.CheckBox.md#getautofitheight)
- [getAutoFitWidth](GC.Spread.Sheets.CellTypes.CheckBox.md#getautofitwidth)
- [getEditorValue](GC.Spread.Sheets.CellTypes.CheckBox.md#geteditorvalue)
- [getHitInfo](GC.Spread.Sheets.CellTypes.CheckBox.md#gethitinfo)
- [hitTestMode](GC.Spread.Sheets.CellTypes.CheckBox.md#hittestmode)
- [isEditingValueChanged](GC.Spread.Sheets.CellTypes.CheckBox.md#iseditingvaluechanged)
- [isImeAware](GC.Spread.Sheets.CellTypes.CheckBox.md#isimeaware)
- [isReservedKey](GC.Spread.Sheets.CellTypes.CheckBox.md#isreservedkey)
- [isThreeState](GC.Spread.Sheets.CellTypes.CheckBox.md#isthreestate)
- [mode](GC.Spread.Sheets.CellTypes.CheckBox.md#mode)
- [paint](GC.Spread.Sheets.CellTypes.CheckBox.md#paint)
- [paintContent](GC.Spread.Sheets.CellTypes.CheckBox.md#paintcontent)
- [parse](GC.Spread.Sheets.CellTypes.CheckBox.md#parse)
- [processKeyDown](GC.Spread.Sheets.CellTypes.CheckBox.md#processkeydown)
- [processKeyUp](GC.Spread.Sheets.CellTypes.CheckBox.md#processkeyup)
- [processMouseDown](GC.Spread.Sheets.CellTypes.CheckBox.md#processmousedown)
- [processMouseEnter](GC.Spread.Sheets.CellTypes.CheckBox.md#processmouseenter)
- [processMouseLeave](GC.Spread.Sheets.CellTypes.CheckBox.md#processmouseleave)
- [processMouseMove](GC.Spread.Sheets.CellTypes.CheckBox.md#processmousemove)
- [processMouseUp](GC.Spread.Sheets.CellTypes.CheckBox.md#processmouseup)
- [selectAll](GC.Spread.Sheets.CellTypes.CheckBox.md#selectall)
- [setEditorValue](GC.Spread.Sheets.CellTypes.CheckBox.md#seteditorvalue)
- [textAlign](GC.Spread.Sheets.CellTypes.CheckBox.md#textalign)
- [textEditable](GC.Spread.Sheets.CellTypes.CheckBox.md#texteditable)
- [textFalse](GC.Spread.Sheets.CellTypes.CheckBox.md#textfalse)
- [textIndeterminate](GC.Spread.Sheets.CellTypes.CheckBox.md#textindeterminate)
- [textTrue](GC.Spread.Sheets.CellTypes.CheckBox.md#texttrue)
- [toJSON](GC.Spread.Sheets.CellTypes.CheckBox.md#tojson)
- [toggleOptions](GC.Spread.Sheets.CellTypes.CheckBox.md#toggleoptions)
- [updateEditor](GC.Spread.Sheets.CellTypes.CheckBox.md#updateeditor)
- [updateEditorContainer](GC.Spread.Sheets.CellTypes.CheckBox.md#updateeditorcontainer)
- [updateImeMode](GC.Spread.Sheets.CellTypes.CheckBox.md#updateimemode)

## Constructors

### <a id="constructor" name="constructor"></a> constructor

• **new CheckBox**()

表示一个复选框单元格。

**`example`**
```javascript
//此示例创建一个复选框单元格。
var cellType1 = new GC.Spread.Sheets.CellTypes.CheckBox();
cellType1.caption("caption");
cellType1.textTrue("true");
cellType1.textFalse("false");
cellType1.textIndeterminate("indeterminate");
cellType1.textAlign(GC.Spread.Sheets.CellTypes.CheckBoxTextAlign.bottom);
cellType1.isThreeState(true);
cellType1.boxSize(20);
activeSheet.getCell(1, 1).cellType(cellType1);
```

#### Overrides

[Base](GC.Spread.Sheets.CellTypes.Base.md).[constructor](GC.Spread.Sheets.CellTypes.Base.md#constructor)

## Properties

### <a id="typename" name="typename"></a> typeName

• **typeName**: `string`

表示用于支持序列化的类型名称字符串。

#### Inherited from

[Base](GC.Spread.Sheets.CellTypes.Base.md).[typeName](GC.Spread.Sheets.CellTypes.Base.md#typename)

## Methods

### <a id="activateeditor" name="activateeditor"></a> activateEditor

▸ **activateEditor**(`editorContext`, `cellStyle`, `cellRect`, `context?`): `void`

激活编辑器，包括设置编辑器的属性或属性以及绑定编辑器的事件。

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `editorContext` | `HTMLElement` | 由 createEditorElement 方法创建的 DOM 元素。 |
| `cellStyle` | [`Style`](GC.Spread.Sheets.Style.md) | 单元格的实际样式。 |
| `cellRect` | [`Rect`](GC.Spread.Sheets.Rect.md) | 单元格的布局信息。 |
| `context?` | `any` | 与单元格类型相关的上下文。 |

#### Returns

`void`

#### Inherited from

[Base](GC.Spread.Sheets.CellTypes.Base.md).[activateEditor](GC.Spread.Sheets.CellTypes.Base.md#activateeditor)

___

### <a id="boxsize" name="boxsize"></a> boxSize

▸ **boxSize**(`value?`): `any`

获取或设置复选框的大小。

**`example`**
```javascript
//此示例创建一个复选框单元格。
var cellType1 = new GC.Spread.Sheets.CellTypes.CheckBox();
cellType1.caption("caption");
cellType1.textTrue("true");
cellType1.textFalse("false");
cellType1.textIndeterminate("indeterminate");
cellType1.textAlign(GC.Spread.Sheets.CellTypes.CheckBoxTextAlign.bottom);
cellType1.isThreeState(true);
cellType1.boxSize(20);
activeSheet.getCell(1, 1).cellType(cellType1);
```

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `value?` | `string` \| `number` | 复选框的大小。此值支持数字和“auto”。 |

#### Returns

`any`

如果未设置值，则返回复选框的大小；否则返回复选框单元格类型。

___

### <a id="caption" name="caption"></a> caption

▸ **caption**(`value?`): `any`

获取或设置单元格类型的标题。

**`example`**
```javascript
//此示例创建一个复选框单元格。
var cellType1 = new GC.Spread.Sheets.CellTypes.CheckBox();
cellType1.caption("caption");
cellType1.textTrue("true");
cellType1.textFalse("false");
cellType1.textIndeterminate("indeterminate");
cellType1.textAlign(GC.Spread.Sheets.CellTypes.CheckBoxTextAlign.bottom);
cellType1.isThreeState(true);
cellType1.boxSize(20);
activeSheet.getCell(1, 1).cellType(cellType1);
```

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `value?` | `string` | 单元格类型的标题。 |

#### Returns

`any`

如果未设置值，则返回标题；否则返回复选框单元格类型。

___

### <a id="createeditorelement" name="createeditorelement"></a> createEditorElement

▸ **createEditorElement**(`context?`): `HTMLElement`

创建一个 DOM 元素并返回它。

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `context?` | `any` | 与单元格类型相关的上下文。 |

#### Returns

`HTMLElement`

返回一个 DOM 元素。

#### Inherited from

[Base](GC.Spread.Sheets.CellTypes.Base.md).[createEditorElement](GC.Spread.Sheets.CellTypes.Base.md#createeditorelement)

___

### <a id="deactivateeditor" name="deactivateeditor"></a> deactivateEditor

▸ **deactivateEditor**(`editorContext`, `context?`): `void`

停用编辑器，例如取消绑定编辑器的事件。

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `editorContext` | `HTMLElement` | 由 createEditorElement 方法创建的 DOM 元素。 |
| `context?` | `any` | 与单元格类型相关的上下文。 |

#### Returns

`void`

#### Inherited from

[Base](GC.Spread.Sheets.CellTypes.Base.md).[deactivateEditor](GC.Spread.Sheets.CellTypes.Base.md#deactivateeditor)

___

### <a id="focus" name="focus"></a> focus

▸ **focus**(`editorContext`, `context?`): `void`

聚焦编辑器 DOM 元素。

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `editorContext` | `HTMLElement` | 由 createEditorElement 方法创建的 DOM 元素。 |
| `context?` | `any` | 与单元格类型相关的上下文。 |

#### Returns

`void`

#### Inherited from

[Base](GC.Spread.Sheets.CellTypes.Base.md).[focus](GC.Spread.Sheets.CellTypes.Base.md#focus)

___

### <a id="format" name="format"></a> format

▸ **format**(`value`, `format`, `formattedData?`, `context?`): `string`

使用指定的格式格式化一个值。

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `value` | `any` | 要格式化的对象值。 |
| `format` | `string` \| [`GeneralFormatter`](GC.Spread.Formatter.GeneralFormatter.md) | 格式。 |
| `formattedData?` | [`FormattedData`](../interfaces/GC.Spread.Sheets.FormattedData.md) | 格式化的数据。 |
| `context?` | `any` | 与单元格类型相关的上下文。 |

#### Returns

`string`

返回格式化的字符串。

#### Inherited from

[Base](GC.Spread.Sheets.CellTypes.Base.md).[format](GC.Spread.Sheets.CellTypes.Base.md#format)

___

### <a id="fromjson" name="fromjson"></a> fromJSON

▸ **fromJSON**(`settings`): `void`

从指定的 JSON 字符串加载对象状态。

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `settings` | `any` | 从反序列化获取的单元格类型数据。 |

#### Returns

`void`

#### Inherited from

[Base](GC.Spread.Sheets.CellTypes.Base.md).[fromJSON](GC.Spread.Sheets.CellTypes.Base.md#fromjson)

___

### <a id="getautofitheight" name="getautofitheight"></a> getAutoFitHeight

▸ **getAutoFitHeight**(`value`, `text`, `cellStyle`, `zoomFactor`, `context?`): `number`

获取一个单元格的高度，可以用于处理行自动适应。

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `value` | `any` | 单元格的值。 |
| `text` | `string` | 单元格的文本。 |
| `cellStyle` | [`Style`](GC.Spread.Sheets.Style.md) | 单元格的实际值。 |
| `zoomFactor` | `number` | 当前工作表的缩放因子。 |
| `context?` | `any` | 与单元格类型相关的上下文。 |

#### Returns

`number`

返回单元格的高度，可以用于处理行自动适应。

#### Inherited from

[Base](GC.Spread.Sheets.CellTypes.Base.md).[getAutoFitHeight](GC.Spread.Sheets.CellTypes.Base.md#getautofitheight)

___

### <a id="getautofitwidth" name="getautofitwidth"></a> getAutoFitWidth

▸ **getAutoFitWidth**(`value`, `text`, `cellStyle`, `zoomFactor`, `context?`): `number`

获取一个单元格的宽度，可以用于处理列自动适应。

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `value` | `any` | 单元格的值。 |
| `text` | `string` | 单元格的文本。 |
| `cellStyle` | [`Style`](GC.Spread.Sheets.Style.md) | 单元格的实际值。 |
| `zoomFactor` | `number` | 当前工作表的缩放因子。 |
| `context?` | `any` | 与单元格类型相关的上下文。 |

#### Returns

`number`

返回单元格的宽度，可以用于处理列自动适应。

#### Inherited from

[Base](GC.Spread.Sheets.CellTypes.Base.md).[getAutoFitWidth](GC.Spread.Sheets.CellTypes.Base.md#getautofitwidth)

___

### <a id="geteditorvalue" name="geteditorvalue"></a> getEditorValue

▸ **getEditorValue**(`editorContext`, `context?`): `any`

获取编辑器的值。

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `editorContext` | `HTMLElement` | 由 createEditorElement 方法创建的 DOM 元素。 |
| `context?` | `any` | 与单元格类型相关的上下文。 |

#### Returns

`any`

返回编辑器的值。

#### Inherited from

[Base](GC.Spread.Sheets.CellTypes.Base.md).[getEditorValue](GC.Spread.Sheets.CellTypes.Base.md#geteditorvalue)

___

### <a id="gethitinfo" name="gethitinfo"></a> getHitInfo

▸ **getHitInfo**(`x`, `y`, `cellStyle`, `cellRect`, `context?`): [`IHitTestCellTypeHitInfo`](../interfaces/GC.Spread.Sheets.IHitTestCellTypeHitInfo.md)

获取单元格类型的命中信息。

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `x` | `number` | 指针当前位置相对于画布的 <i>x</i> 坐标。 |
| `y` | `number` | 指针当前位置相对于画布的 <i>y</i> 坐标。 |
| `cellStyle` | [`Style`](GC.Spread.Sheets.Style.md) | 当前单元格的实际样式。 |
| `cellRect` | [`Rect`](GC.Spread.Sheets.Rect.md) | 当前单元格的布局信息。 |
| `context?` | `any` | 与单元格类型相关的上下文。 |

#### Returns

[`IHitTestCellTypeHitInfo`](../interfaces/GC.Spread.Sheets.IHitTestCellTypeHitInfo.md)

返回一个包含 <i>x</i>, <i>y</i>, <i>row</i>, <i>col</i>, <i>cellRect</i> 和 <i>sheetArea</i> 参数的对象，以及一个指示 <i>isReservedLocation</i> 的值。
<i>isReservedLocation</i> 为 `true` 表示命中测试在单元格类型需要处理的特殊区域；否则为 `false`。

#### Inherited from

[Base](GC.Spread.Sheets.CellTypes.Base.md).[getHitInfo](GC.Spread.Sheets.CellTypes.Base.md#gethitinfo)

___

### <a id="hittestmode" name="hittestmode"></a> hitTestMode

▸ **hitTestMode**(`value?`): [`CheckBox`](GC.Spread.Sheets.CellTypes.CheckBox.md) \| [`CheckBoxHitTestMode`](../modules/GC.Spread.Sheets.CellTypes.md#checkboxhittestmode)

获取或设置一个值，该值指示复选框单元格类型在 checkbox 和 modern 模式下的命中测试模式。
该设置用于控制单元格的哪个区域会响应鼠标交互（点击、光标变化）。

**`example`**
```javascript
// 此示例创建一个使用 checkbox 模式命中测试的复选框单元格。
var cellType1 = new GC.Spread.Sheets.CellTypes.CheckBox();
cellType1.textTrue("Yes");
cellType1.textFalse("No");
cellType1.hitTestMode("checkbox"); // 只有复选框区域响应点击
activeSheet.getCell(1, 1).cellType(cellType1);
```

**`example`**
```javascript
// 此示例创建一个使用 cell 模式命中测试的复选框单元格（默认）。
var cellType2 = new GC.Spread.Sheets.CellTypes.CheckBox();
cellType2.textTrue("Checked");
cellType2.textFalse("Unchecked");
cellType2.hitTestMode("cell"); // 整个单元格区域都响应点击
activeSheet.getCell(2, 1).cellType(cellType2);
```

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `value?` | [`CheckBoxHitTestMode`](../modules/GC.Spread.Sheets.CellTypes.md#checkboxhittestmode) | 命中测试模式。'cell' 表示整个单元格区域响应交互；'checkbox' 表示只有复选框区域响应交互。 |

#### Returns

[`CheckBox`](GC.Spread.Sheets.CellTypes.CheckBox.md) \| [`CheckBoxHitTestMode`](../modules/GC.Spread.Sheets.CellTypes.md#checkboxhittestmode)

如果未设置值，则返回复选框单元格类型的命中测试模式；否则返回复选框单元格类型。

___

### <a id="iseditingvaluechanged" name="iseditingvaluechanged"></a> isEditingValueChanged

▸ **isEditingValueChanged**(`oldValue`, `newValue`, `context?`): `boolean`

编辑值是否已更改。

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `oldValue` | `any` | 旧的编辑值。 |
| `newValue` | `any` | 新的编辑值。 |
| `context?` | `any` | 与单元格类型相关的上下文。有关更多信息，请参阅备注。 |

#### Returns

`boolean`

如果 oldValue 等于 newValue，则返回 `true`；否则返回 `false`。

#### Inherited from

[Base](GC.Spread.Sheets.CellTypes.Base.md).[isEditingValueChanged](GC.Spread.Sheets.CellTypes.Base.md#iseditingvaluechanged)

___

### <a id="isimeaware" name="isimeaware"></a> isImeAware

▸ **isImeAware**(`context?`): `boolean`

此单元格类型是否支持 IME。

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `context?` | `any` | 与单元格类型相关的上下文。有关更多信息，请参阅备注。 |

#### Returns

`boolean`

如果单元格类型支持 IME，则返回 `true`；否则返回 `false`。

#### Inherited from

[Base](GC.Spread.Sheets.CellTypes.Base.md).[isImeAware](GC.Spread.Sheets.CellTypes.Base.md#isimeaware)

___

### <a id="isreservedkey" name="isreservedkey"></a> isReservedKey

▸ **isReservedKey**(`e`, `context?`): `boolean`

单元格类型是否自行处理键盘事件。

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `e` | `KeyboardEvent` | 键盘事件。 |
| `context?` | `any` | 与单元格类型相关的上下文。有关更多信息，请参阅备注。 |

#### Returns

`boolean`

如果单元格类型自行处理键盘事件，则返回 `true`；否则返回 `false`。

#### Inherited from

[Base](GC.Spread.Sheets.CellTypes.Base.md).[isReservedKey](GC.Spread.Sheets.CellTypes.Base.md#isreservedkey)

___

### <a id="isthreestate" name="isthreestate"></a> isThreeState

▸ **isThreeState**(`value?`): `any`

获取或设置是否支持三态。

**`example`**
```javascript
//此示例创建一个复选框单元格。
var cellType1 = new GC.Spread.Sheets.CellTypes.CheckBox();
cellType1.caption("caption");
cellType1.textTrue("true");
cellType1.textFalse("false");
cellType1.textIndeterminate("indeterminate");
cellType1.textAlign(GC.Spread.Sheets.CellTypes.CheckBoxTextAlign.bottom);
cellType1.isThreeState(true);
cellType1.boxSize(20);
activeSheet.getCell(1, 1).cellType(cellType1);
```

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `value?` | `boolean` | 是否支持三态。 |

#### Returns

`any`

如果未设置值，则返回是否支持三态；否则返回复选框单元格类型。

___

### <a id="mode" name="mode"></a> mode

▸ **mode**(`value?`): `any`

获取或设置一个值，该值指示复选框单元格类型的模式。

**`example`**
```javascript
// 此示例创建一个复选框单元格。
var cellType1 = new GC.Spread.Sheets.CellTypes.CheckBox();
cellType1.caption("caption");
cellType1.textTrue("true");
cellType1.textFalse("false");
cellType1.textAlign(GC.Spread.Sheets.CellTypes.CheckBoxTextAlign.bottom);
cellType1.mode("toggle");
activeSheet.getCell(1, 1).cellType(cellType1);
```

**`example`**
```javascript
// 此示例创建使用现代模式的复选框单元格。
var cellType2 = new GC.Spread.Sheets.CellTypes.CheckBox();
cellType2.caption("Modern Checkbox");
cellType2.mode("modern");
activeSheet.getCell(2, 1).cellType(cellType2);
```

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `value?` | [`CheckBoxMode`](../modules/GC.Spread.Sheets.CellTypes.md#checkboxmode) | 复选框单元格类型的模式。 |

#### Returns

`any`

如果未设置值，则返回复选框单元格类型的模式。

___

### <a id="paint" name="paint"></a> paint

▸ **paint**(`ctx`, `value`, `x`, `y`, `w`, `h`, `style`, `context?`): `void`

在画布上绘制单元格。

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `ctx` | `CanvasRenderingContext2D` | 画布的二维上下文。 |
| `value` | `any` | 单元格的值。 |
| `x` | `number` | 相对于画布的 <i>x</i> 坐标。 |
| `y` | `number` | 相对于画布的 <i>y</i> 坐标。 |
| `w` | `number` | 单元格的宽度。 |
| `h` | `number` | 单元格的高度。 |
| `style` | [`Style`](GC.Spread.Sheets.Style.md) | 单元格的实际样式。 |
| `context?` | `any` | 与单元格类型相关的上下文。有关更多信息，请参阅备注。 |

#### Returns

`void`

#### Inherited from

[Base](GC.Spread.Sheets.CellTypes.Base.md).[paint](GC.Spread.Sheets.CellTypes.Base.md#paint)

___

### <a id="paintcontent" name="paintcontent"></a> paintContent

▸ **paintContent**(`ctx`, `value`, `x`, `y`, `w`, `h`, `style`, `context?`): `void`

在画布上绘制单元格内容区域。

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `ctx` | `CanvasRenderingContext2D` | 画布的二维上下文。 |
| `value` | `any` | 单元格的值。 |
| `x` | `number` | 相对于画布的 <i>x</i> 坐标。 |
| `y` | `number` | 相对于画布的 <i>y</i> 坐标。 |
| `w` | `number` | 单元格内容区域的宽度。 |
| `h` | `number` | 单元格内容区域的高度。 |
| `style` | [`Style`](GC.Spread.Sheets.Style.md) | 单元格的实际样式。 |
| `context?` | `any` | 与单元格类型相关的上下文。有关更多信息，请参阅备注。 |

#### Returns

`void`

#### Inherited from

[Base](GC.Spread.Sheets.CellTypes.Base.md).[paintContent](GC.Spread.Sheets.CellTypes.Base.md#paintcontent)

___

### <a id="parse" name="parse"></a> parse

▸ **parse**(`text`, `formatStr`, `context?`): `any`

使用指定的格式字符串将文本解析为对象。

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `text` | `string` | 要解析的文本字符串。 |
| `formatStr` | `string` | 解析格式字符串。 |
| `context?` | `any` | 与单元格类型相关的上下文。有关更多信息，请参阅备注。 |

#### Returns

`any`

解析后的对象。

#### Inherited from

[Base](GC.Spread.Sheets.CellTypes.Base.md).[parse](GC.Spread.Sheets.CellTypes.Base.md#parse)

___

### <a id="processkeydown" name="processkeydown"></a> processKeyDown

▸ **processKeyDown**(`event`, `context?`): `boolean`

在显示模式下处理按键按下事件。

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `event` | `KeyboardEvent` | 键盘事件。 |
| `context?` | `any` | 与单元格类型相关的上下文。有关更多信息，请参阅备注。 |

#### Returns

`boolean`

如果处理成功则返回 `true`；否则返回 `false`。

#### Inherited from

[Base](GC.Spread.Sheets.CellTypes.Base.md).[processKeyDown](GC.Spread.Sheets.CellTypes.Base.md#processkeydown)

___

### <a id="processkeyup" name="processkeyup"></a> processKeyUp

▸ **processKeyUp**(`event`, `context?`): `boolean`

在显示模式下处理按键释放事件。

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `event` | `KeyboardEvent` | 键盘事件。 |
| `context?` | `any` | 与单元格类型相关的上下文。有关更多信息，请参阅备注。 |

#### Returns

`boolean`

如果处理成功则返回 `true`；否则返回 `false`。

#### Inherited from

[Base](GC.Spread.Sheets.CellTypes.Base.md).[processKeyUp](GC.Spread.Sheets.CellTypes.Base.md#processkeyup)

___

### <a id="processmousedown" name="processmousedown"></a> processMouseDown

▸ **processMouseDown**(`hitInfo`): `boolean`

在显示模式下处理鼠标按下事件。

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `hitInfo` | [`IHitTestCellTypeHitInfo`](../interfaces/GC.Spread.Sheets.IHitTestCellTypeHitInfo.md) | 由 getHitInfo 方法返回的命中测试信息。有关更多信息，请参阅备注。 |

#### Returns

`boolean`

如果处理成功则返回 `true`；否则返回 `false`。

#### Inherited from

[Base](GC.Spread.Sheets.CellTypes.Base.md).[processMouseDown](GC.Spread.Sheets.CellTypes.Base.md#processmousedown)

___

### <a id="processmouseenter" name="processmouseenter"></a> processMouseEnter

▸ **processMouseEnter**(`hitInfo`): `boolean`

在显示模式下处理鼠标进入事件。

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `hitInfo` | [`IHitTestCellTypeHitInfo`](../interfaces/GC.Spread.Sheets.IHitTestCellTypeHitInfo.md) | 由 getHitInfo 方法返回的命中测试信息。有关更多信息，请参阅备注。 |

#### Returns

`boolean`

如果处理成功则返回 `true`；否则返回 `false`。

#### Inherited from

[Base](GC.Spread.Sheets.CellTypes.Base.md).[processMouseEnter](GC.Spread.Sheets.CellTypes.Base.md#processmouseenter)

___

### <a id="processmouseleave" name="processmouseleave"></a> processMouseLeave

▸ **processMouseLeave**(`hitInfo`): `boolean`

在显示模式下处理鼠标离开事件。

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `hitInfo` | [`IHitTestCellTypeHitInfo`](../interfaces/GC.Spread.Sheets.IHitTestCellTypeHitInfo.md) | 由 getHitInfo 方法返回的命中测试信息。有关更多信息，请参阅备注。 |

#### Returns

`boolean`

如果处理成功则返回 `true`；否则返回 `false`。

#### Inherited from

[Base](GC.Spread.Sheets.CellTypes.Base.md).[processMouseLeave](GC.Spread.Sheets.CellTypes.Base.md#processmouseleave)

___

### <a id="processmousemove" name="processmousemove"></a> processMouseMove

▸ **processMouseMove**(`hitInfo`): `boolean`

在显示模式下处理鼠标移动事件。

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `hitInfo` | [`IHitTestCellTypeHitInfo`](../interfaces/GC.Spread.Sheets.IHitTestCellTypeHitInfo.md) | 由 getHitInfo 方法返回的命中测试信息。有关更多信息，请参阅备注。 |

#### Returns

`boolean`

如果处理成功则返回 `true`；否则返回 `false`。

#### Inherited from

[Base](GC.Spread.Sheets.CellTypes.Base.md).[processMouseMove](GC.Spread.Sheets.CellTypes.Base.md#processmousemove)

___

### <a id="processmouseup" name="processmouseup"></a> processMouseUp

▸ **processMouseUp**(`hitInfo`): `boolean`

在显示模式下处理鼠标释放事件。

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `hitInfo` | [`IHitTestCellTypeHitInfo`](../interfaces/GC.Spread.Sheets.IHitTestCellTypeHitInfo.md) | 由 getHitInfo 方法返回的命中测试信息。有关更多信息，请参阅备注。 |

#### Returns

`boolean`

如果处理成功则返回 `true`；否则返回 `false`。

#### Inherited from

[Base](GC.Spread.Sheets.CellTypes.Base.md).[processMouseUp](GC.Spread.Sheets.CellTypes.Base.md#processmouseup)

___

### <a id="selectall" name="selectall"></a> selectAll

▸ **selectAll**(`editorContext`, `context?`): `void`

选择编辑器 DOM 元素中的所有文本。

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `editorContext` | `HTMLElement` | 由 createEditorElement 方法创建的 DOM 元素。 |
| `context?` | `any` | 与单元格类型相关的上下文。有关更多信息，请参阅备注。 |

#### Returns

`void`

#### Inherited from

[Base](GC.Spread.Sheets.CellTypes.Base.md).[selectAll](GC.Spread.Sheets.CellTypes.Base.md#selectall)

___

### <a id="seteditorvalue" name="seteditorvalue"></a> setEditorValue

▸ **setEditorValue**(`editorContext`, `value`, `context?`): `void`

设置编辑器的值。

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `editorContext` | `HTMLElement` | 由 createEditorElement 方法创建的 DOM 元素。 |
| `value` | `any` | 由活动单元格返回的值。 |
| `context?` | `any` | 与单元格类型相关的上下文。有关更多信息，请参阅备注。 |

#### Returns

`void`

#### Inherited from

[Base](GC.Spread.Sheets.CellTypes.Base.md).[setEditorValue](GC.Spread.Sheets.CellTypes.Base.md#seteditorvalue)

___

### <a id="textalign" name="textalign"></a> textAlign

▸ **textAlign**(`value?`): `any`

获取或设置文本相对于复选框的对齐方式。

**`example`**
```javascript
//此示例创建一个复选框单元格。
var cellType1 = new GC.Spread.Sheets.CellTypes.CheckBox();
cellType1.caption("caption");
cellType1.textTrue("true");
cellType1.textFalse("false");
cellType1.textIndeterminate("indeterminate");
cellType1.textAlign(GC.Spread.Sheets.CellTypes.CheckBoxTextAlign.bottom);
cellType1.isThreeState(true);
cellType1.boxSize(20);
activeSheet.getCell(1, 1).cellType(cellType1);
```

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `value?` | [`CheckBoxTextAlign`](../enums/GC.Spread.Sheets.CellTypes.CheckBoxTextAlign.md) | 文本相对于复选框的对齐方式。 |

#### Returns

`any`

如果未设置值，则返回文本相对于复选框的对齐方式；否则返回复选框单元格类型。

___

### <a id="texteditable" name="texteditable"></a> textEditable

▸ **textEditable**(`value?`): `boolean` \| [`CheckBox`](GC.Spread.Sheets.CellTypes.CheckBox.md)

获取或设置一个值，该值指示复选框单元格类型在 checkbox 和 modern 模式下是否允许编辑文本。
设置为 false 时，复选框会表现为切换模式，且无法进入文本编辑模式（双击或按 F2）。

**`example`**
```javascript
// 此示例创建一个文本不可编辑的复选框单元格。
var cellType1 = new GC.Spread.Sheets.CellTypes.CheckBox();
cellType1.textTrue("Yes");
cellType1.textFalse("No");
cellType1.textEditable(false); // 无法通过双击编辑文本
activeSheet.getCell(1, 1).cellType(cellType1);
```

**`example`**
```javascript
// 此示例创建一个文本可编辑的复选框单元格（默认）。
var cellType2 = new GC.Spread.Sheets.CellTypes.CheckBox();
cellType2.textTrue("Checked");
cellType2.textFalse("Unchecked");
cellType2.textEditable(true); // 可以通过双击编辑文本
activeSheet.getCell(2, 1).cellType(cellType2);
```

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `value?` | `boolean` | 复选框文本是否可编辑。默认值为 true。 |

#### Returns

`boolean` \| [`CheckBox`](GC.Spread.Sheets.CellTypes.CheckBox.md)

如果未设置值，则返回复选框文本是否可编辑；否则返回复选框单元格类型。

___

### <a id="textfalse" name="textfalse"></a> textFalse

▸ **textFalse**(`value?`): `any`

获取或设置单元格的值为`false`时的文本。

**`example`**
```javascript
//此示例创建一个复选框单元格。
var cellType1 = new GC.Spread.Sheets.CellTypes.CheckBox();
cellType1.caption("caption");
cellType1.textTrue("true");
cellType1.textFalse("false");
cellType1.textIndeterminate("indeterminate");
cellType1.textAlign(GC.Spread.Sheets.CellTypes.CheckBoxTextAlign.bottom);
cellType1.isThreeState(true);
cellType1.boxSize(20);
activeSheet.getCell(1, 1).cellType(cellType1);
```

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `value?` | `string` | 单元格的值为`false`时的文本。 |

#### Returns

`any`

如果未设置值，则返回单元格的值为`false`时的文本；否则返回复选框单元格类型。

___

### <a id="textindeterminate" name="textindeterminate"></a> textIndeterminate

▸ **textIndeterminate**(`value?`): `any`

获取或设置单元格的值为不确定时的文本。

**`example`**
```javascript
//此示例创建一个复选框单元格。
var cellType1 = new GC.Spread.Sheets.CellTypes.CheckBox();
cellType1.caption("caption");
cellType1.textTrue("true");
cellType1.textFalse("false");
cellType1.textIndeterminate("indeterminate");
cellType1.textAlign(GC.Spread.Sheets.CellTypes.CheckBoxTextAlign.bottom);
cellType1.isThreeState(true);
cellType1.boxSize(20);
activeSheet.getCell(1, 1).cellType(cellType1);
```

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `value?` | `string` | 单元格的值为不确定时的文本。 |

#### Returns

`any`

如果未设置值，则返回单元格的值为不确定时的文本；否则返回复选框单元格类型。

___

### <a id="texttrue" name="texttrue"></a> textTrue

▸ **textTrue**(`value?`): `any`

获取或设置单元格的值为`true`时的文本。

**`example`**
```javascript
//此示例创建一个复选框单元格。
var cellType1 = new GC.Spread.Sheets.CellTypes.CheckBox();
cellType1.caption("caption");
cellType1.textTrue("true");
cellType1.textFalse("false");
cellType1.textIndeterminate("indeterminate");
cellType1.textAlign(GC.Spread.Sheets.CellTypes.CheckBoxTextAlign.bottom);
cellType1.isThreeState(true);
cellType1.boxSize(20);
activeSheet.getCell(1, 1).cellType(cellType1);
```

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `value?` | `string` | 单元格的值为`true`时的文本。 |

#### Returns

`any`

如果未设置值，则返回单元格的值为`true`时的文本；否则返回复选框单元格类型。

___

### <a id="tojson" name="tojson"></a> toJSON

▸ **toJSON**(): `any`

将对象状态保存为 JSON 字符串。

#### Returns

`any`

单元格类型数据。

#### Inherited from

[Base](GC.Spread.Sheets.CellTypes.Base.md).[toJSON](GC.Spread.Sheets.CellTypes.Base.md#tojson)

___

### <a id="toggleoptions" name="toggleoptions"></a> toggleOptions

▸ **toggleOptions**(`value?`): `any`

获取或设置表示切换选项的值

**`example`**
```javascript
// 此示例创建一个复选框单元格。
var cellType1 = new GC.Spread.Sheets.CellTypes.CheckBox();
cellType1.caption("caption");
cellType1.textTrue("ON");
cellType1.textFalse("OFF");
cellType1.mode("toggle");
cellType1.textAlign(GC.Spread.Sheets.CellTypes.CheckBoxTextAlign.inside);
cellType1.toggleOptions({
    width: 60,
    height: 30,
    trackColorOn: '#4CAF50',
    trackColorOff: '#767577',
    sliderColorOn: '#ffffff',
    sliderColorOff: '#ffffff',
    sliderMargin: 2,
    animationDuration: 100,
    trackRadius: 8,
    sliderRadius: 4
});
activeSheet.getCell(1, 1).cellType(cellType1);
```

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `value?` | [`IToggleOptions`](../interfaces/GC.Spread.Sheets.CellTypes.IToggleOptions.md) | 切换选项。 |

#### Returns

`any`

如果未设置值，则返回切换选项。

___

### <a id="updateeditor" name="updateeditor"></a> updateEditor

▸ **updateEditor**(`editorContext`, `cellStyle`, `cellRect`, `context?`): [`Rect`](GC.Spread.Sheets.Rect.md)

更新编辑器的大小。

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `editorContext` | `HTMLElement` | 由 createEditorElement 方法创建的 DOM 元素。 |
| `cellStyle` | [`Style`](GC.Spread.Sheets.Style.md) | 单元格的实际样式。 |
| `cellRect` | [`Rect`](GC.Spread.Sheets.Rect.md) | 单元格的布局信息。 |
| `context?` | `any` | 与单元格类型相关的上下文。有关更多信息，请参阅备注。 |

#### Returns

[`Rect`](GC.Spread.Sheets.Rect.md)

返回单元格包装元素的新大小，它应包含 'width' 和 'height' 两个属性。

#### Inherited from

[Base](GC.Spread.Sheets.CellTypes.Base.md).[updateEditor](GC.Spread.Sheets.CellTypes.Base.md#updateeditor)

___

### <a id="updateeditorcontainer" name="updateeditorcontainer"></a> updateEditorContainer

▸ **updateEditorContainer**(`editorContext`, `editorBounds`, `cellStyle`): `void`

更新单元格包装元素的大小。

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `editorContext` | `HTMLElement` | 由 createEditorElement 方法创建的 DOM 元素。 |
| `editorBounds` | [`Rect`](GC.Spread.Sheets.Rect.md) | 单元格包装元素的新大小。 |
| `cellStyle` | [`Style`](GC.Spread.Sheets.Style.md) | 单元格的实际样式。 |

#### Returns

`void`

#### Inherited from

[Base](GC.Spread.Sheets.CellTypes.Base.md).[updateEditorContainer](GC.Spread.Sheets.CellTypes.Base.md#updateeditorcontainer)

___

### <a id="updateimemode" name="updateimemode"></a> updateImeMode

▸ **updateImeMode**(`editorContext`, `imeMode`, `context?`): `void`

更新编辑器的输入法模式。

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `editorContext` | `HTMLElement` | 由 createEditorElement 方法创建的 DOM 元素。 |
| `imeMode` | [`ImeMode`](../enums/GC.Spread.Sheets.ImeMode.md) | 来自单元格实际样式的输入法模式。 |
| `context?` | `any` | 与单元格类型相关的上下文。有关更多信息，请参阅备注。 |

#### Returns

`void`

#### Inherited from

[Base](GC.Spread.Sheets.CellTypes.Base.md).[updateImeMode](GC.Spread.Sheets.CellTypes.Base.md#updateimemode)
